--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: R Package of visualization of post-translation-modification
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 YEAR: 2018
 Imports:
     protViz,
@@ -17,6 +17,7 @@ Imports:
     rTANDEM,
     XML,
     tools,
-    ggplot2
+    ggplot2,
+    roxygen2
 Suggests:
     testthat
